--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 <body>
     <nav>
         <div class = "black">
-            <button>Submit request</button>
-            <button>Sign in</button>
+            <div class="abbuttons">
+            <button>Abstract |</button>
+            <button>Help center</button>
+            </div>
+            <button class="submit">Submit request</button>
+            <button class="sign">Sign in</button>
         </div>
         <div class="container">
-            <p>How can we help?</p>
+            <p class="help">How can we help?</p>
             <button class = "search">Search</button>
         </div>
-        
-        
     </nav>
 </body>
 </html>
