--- a/index.html
+++ b/index.html
@@ -9,17 +9,33 @@
 <body>
     <nav>
         <div class = "black">
-            <div class="abbuttons">
-            <button>Abstract |</button>
-            <button>Help center</button>
-            </div>
-            <button class="submit">Submit request</button>
-            <button class="sign">Sign in</button>
+            <button class="ab">Abstract |</button> <button class="center">Help center</button> <button class="submit">Submit request</button> <button class="sign">Sign in</button>
+            
         </div>
         <div class="container">
             <p class="help">How can we help?</p>
             <button class = "search">Search</button>
         </div>
     </nav>
+    <div class="boxes">
+        <h1>Branches</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam eos ratione iste temporibus dolorum recusandae sint.</p>
+        <button>Learn more</button>
+        <h1>Manage organizations, and projects</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates placeat officiis omnis facere.</p>
+        <button>Learn more</button>
+        <h1>Authenticate to Abstract</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias odio modi recusandae ab perspiciatis sed?</p>
+        <button>Learn more</button>
+        <h1>Manage your account</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ullam maxime vero voluptate natus eligendi ipsum reiciendis amet.</p>
+        <button>Learn more</button>
+        <h1>Manage billing</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae illo ad quae qui fuga sunt nemo consequatur, ab corrupti!</p>
+        <button>Learn more</button>
+        <h1>Abstract support</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto veritatis tempora nobis, quisquam officiis enim incidunt.</p>
+        <button>Learn more</button>
+    </div>
 </body>
 </html>
